전호진 검수리스트 갱신

--- a/src/main/resources/static/css/ui_mo.css
+++ b/src/main/resources/static/css/ui_mo.css
@@ -5295,7 +5295,7 @@ position: relative;background-color: #fbfbfb;}
 .author-ul{}
 .author-ul:after{content:'';display: block;clear: both;}
 .author-ul li{float: left;margin-right: 0;padding-bottom: 3.5rem;}
-.author-ul li:nth-child(2n){}
+.author-ul li:nth-child(2n){float: left;margin-right: 0;padding-bottom: 3.5rem;}
 .author-ul li:nth-child(3n){margin-right: 0;}
 .author-ul li:nth-child(4n){}
 
@@ -6761,7 +6761,8 @@ p.dib{display:inline-block !important;}
 .works_pic .icon_box ul li:first-child{float: left;text-align: center;font-size: 2rem;padding-left: 6px;}
 .works_pic .icon_box ul li .ico_good{width: 50px;height: 50px;border-radius: 999px;background: #ffffff url("../img/img_new/ico_good.png") 50% 50% no-repeat;}
 .works_pic .icon_box ul li .ico_scrap{width: 50px;height: 50px;border-radius: 999px;background: #ffffff url("../img/img_new/ico_scrap.png") 50% 50% no-repeat;}
-.works_pic .icon_box ul li .ico_hits{width: 50px;height: 50px;border-radius: 999px;background: #ffffff url("../img/img_new/ico_alarm.png") 50% 50% no-repeat;}
+.works_pic .icon_box ul li .ico_hits{width: 50px;height: 50px;border-radius: 999px;background: #ffffff url("../img/img_new/ico_hits.png") 50% 50% no-repeat;}
+.works_pic .icon_box ul li .ico_alarm{width: 50px;height: 50px;border-radius: 999px;background: #ffffff url("../img/img_new/ico_alarm.png") 50% 50% no-repeat;}
 .works_pic .icon_box ul li .ico_comments{width: 50px;height: 50px;border-radius: 999px;background: #ffffff url("../img/img_new/ico_comments.png") 50% 50% no-repeat;}
 .works_pic .text{font-size: 2.125rem;color: #111111;padding: 20px;text-align: center;width: auto;}
 .btn_area{padding: 6rem 0;text-align: center;}
@@ -6799,7 +6800,8 @@ p.dib{display:inline-block !important;}
 .exhint_row .contents ul li .icon_box ul li:first-child{float: left;text-align: center;font-size: 2rem;padding-left: 0;}
 .exhint_row .contents ul li .icon_box ul li .ico_good{width: 8.75rem;height: 8.75rem;border-radius: 999px;background: #eaebea url("../img/img_new/ico_good.png") 50% 50% no-repeat;background-size: 3rem 3rem;}
 .exhint_row .contents ul li .icon_box ul li .ico_scrap{width: 8.75rem;height: 8.75rem;border-radius: 999px;background: #eaebea url("../img/img_new/ico_scrap.png") 50% 50% no-repeat;background-size: 3rem 3rem;}
-.exhint_row .contents ul li .icon_box ul li .ico_hits{width: 8.75rem;height: 8.75rem;border-radius: 999px;background: #eaebea url("../img/img_new/ico_alarm.png") 50% 50% no-repeat;background-size: 3rem 3rem;}
+.exhint_row .contents ul li .icon_box ul li .ico_hits{width: 8.75rem;height: 8.75rem;border-radius: 999px;background: #eaebea url("../img/img_new/ico_hits.png") 50% 50% no-repeat;background-size: 3rem 3rem;}
+.exhint_row .contents ul li .icon_box ul li .ico_alarm{width: 8.75rem;height: 8.75rem;border-radius: 999px;background: #eaebea url("../img/img_new/ico_alarm.png") 50% 50% no-repeat;background-size: 3rem 3rem;}
 .exhint_row .contents ul li .icon_box ul li .ico_comments{width: 8.75rem;height: 8.75rem;border-radius: 999px;background: #eaebea url("../img/img_new/ico_comments.png") 50% 50% no-repeat;background-size: 3rem 3rem;}
 
 .pagination{margin: 30px 0;display: flex !important;justify-content: center !important;font-size: 2.125rem;}
@@ -7006,7 +7008,8 @@ p.dib{display:inline-block !important;}
 .showingoff_pic .icon_box ul li:last-child{padding-right: 0;}
 .showingoff_pic .icon_box ul li .ico_good{width: 8.75rem;height: 8.75rem;border-radius: 999px;background: #ffffff url("../img/img_new/ico_good.png") 50% 50% no-repeat;background-size: 3rem 3rem;}
 .showingoff_pic .icon_box ul li .ico_scrap{width: 8.75rem;height: 8.75rem;border-radius: 999px;background: #ffffff url("../img/img_new/ico_scrap.png") 50% 50% no-repeat;background-size: 3rem 3rem;}
-.showingoff_pic .icon_box ul li .ico_hits{width: 8.75rem;height: 8.75rem;border-radius: 999px;background: #ffffff url("../img/img_new/ico_alarm.png") 50% 50% no-repeat;background-size: 3rem 3rem;}
+.showingoff_pic .icon_box ul li .ico_hits{width: 8.75rem;height: 8.75rem;border-radius: 999px;background: #ffffff url("../img/img_new/ico_hits.png") 50% 50% no-repeat;background-size: 3rem 3rem;}
+.showingoff_pic .icon_box ul li .ico_alarm{width: 8.75rem;height: 8.75rem;border-radius: 999px;background: #ffffff url("../img/img_new/ico_alarm.png") 50% 50% no-repeat;background-size: 3rem 3rem;}
 .showingoff_pic .icon_box ul li .ico_comments{width: 8.75rem;height: 8.75rem;border-radius: 999px;background: #ffffff url("../img/img_new/ico_comments.png") 50% 50% no-repeat;background-size: 3rem 3rem;}
 .showingoff_pic .text{font-size: 2.125rem;font-weight: 500;color: #111111;padding: 20px;text-align: center;width: auto;}
 
@@ -7278,7 +7281,8 @@ input{-webkit-appearance:none;-webkit-border-radius:0;}
 .works_showingoff_detail_page_wrap .icon_box ul .day{padding-top: 3.1875rem;width: 10rem;}
 .works_showingoff_detail_page_wrap .icon_box ul li .ico_good{width: 8.75rem;height: 8.75rem;border-radius: 999px;background: #eaebea url("../img/img_new/ico_good.png") 50% 50% no-repeat;background-size: 3rem 3rem;}
 .works_showingoff_detail_page_wrap .icon_box ul li .ico_scrap{width: 8.75rem;height: 8.75rem;border-radius: 999px;background: #eaebea url("../img/img_new/ico_scrap.png") 50% 50% no-repeat;background-size: 3rem 3rem;}
-.works_showingoff_detail_page_wrap .icon_box ul li .ico_hits{width: 8.75rem;height: 8.75rem;border-radius: 999px;background: #eaebea url("../img/img_new/ico_alarm.png") 50% 50% no-repeat;background-size: 3rem 3rem;}
+.works_showingoff_detail_page_wrap .icon_box ul li .ico_hits{width: 8.75rem;height: 8.75rem;border-radius: 999px;background: #eaebea url("../img/img_new/ico_hits.png") 50% 50% no-repeat;background-size: 3rem 3rem;}
+.works_showingoff_detail_page_wrap .icon_box ul li .ico_alarm{width: 8.75rem;height: 8.75rem;border-radius: 999px;background: #eaebea url("../img/img_new/ico_alarm.png") 50% 50% no-repeat;background-size: 3rem 3rem;}
 .works_showingoff_detail_page_wrap .icon_box ul li .ico_comments{width: 8.75rem;height: 8.75rem;border-radius: 999px;background: #eaebea url("../img/img_new/ico_comments.png") 50% 50% no-repeat;background-size: 3rem 3rem;}
 .works_showingoff_detail_page_wrap .icon_box ul li .ico_report{width: 8.75rem;height: 8.75rem;border-radius: 999px;background: #eaebea url("../img/img_new/ico_report.png") 50% 50% no-repeat;background-size: 3rem 3rem;}
 
@@ -7477,9 +7481,9 @@ input{-webkit-appearance:none;-webkit-border-radius:0;}
 .search_artist_wrap .artist_name{border-bottom: 1px solid #e8e8e8;padding: 20px 0;}
 .search_artist_wrap .artist_name .tit{width: 100px;font-size: 2rem;font-weight: 500;color: #000000;margin-bottom: 10px;}
 .search_artist_wrap .artist_name .language{display: flex;flex-direction: column;}
-.search_artist_wrap .artist_name .kor a{font-size: 2rem;border: 1px solid #d9d9d9;border-radius: 5px;padding: 10px;margin-right: 10px;display: inline-block;margin-bottom: 5px;}
-.search_artist_wrap .artist_name .eng{margin-top: 20px;}
-.search_artist_wrap .artist_name .eng a{font-size: 2rem;border: 1px solid #d9d9d9;border-radius: 5px;padding: 10px 12px;margin-right: 10px;display: inline-block;margin-bottom: 5px;}
+.search_artist_wrap .artist_name .kor a{font-size: 2rem;border: 1px solid #d9d9d9;border-radius: 5px;padding: 5px;margin-right: 5px;display: inline-block;margin-bottom: 3px;}
+.search_artist_wrap .artist_name .eng{margin-top: 10px;}
+.search_artist_wrap .artist_name .eng a{font-size: 2rem;border: 1px solid #d9d9d9;border-radius: 5px;padding: 5px 6px;margin-right: 5px;display: inline-block;margin-bottom: 3px;}
 .search_artist_wrap .field_activity{border-bottom: 1px solid #e8e8e8;padding: 20px 0;}
 .search_artist_wrap .field_activity .tit{width: 100px;font-size: 2rem;font-weight: 500;color: #000000;margin-bottom: 10px;}
 .search_artist_wrap .field_activity label{margin-right: 30px;font-size: 2rem;}
