--- a/src/main/resources/templates/thymeleaf/fo/community/community_home.html
+++ b/src/main/resources/templates/thymeleaf/fo/community/community_home.html
@@ -103,7 +103,7 @@
                 <ul>
                     <li><a href="/community/main" class="over">홈</a></li>
                     <li><a href="/community/worksList">작품자랑</a></li>
-                    <li><a href="/community/exhintList">전시후기&소개</a></li>
+                    <li><a href="/community/exhintList">전시 소개&후기</a></li>
                     <li><a href="/community/issueList">이슈</a></li>
                     <li><a href="/community/event">이벤트</a></li>
                     <li class="pt0 mt10"><button class="btn_recording" onclick="location.href='/myPage/main'">기록하기</button></li>
@@ -114,7 +114,7 @@
                 <ul>
                     <li><a href="/community/main" class="over">홈</a></li>
                     <li><a href="/community/worksList">작품자랑</a></li>
-                    <li><a href="/community/exhintList">전시후기&소개</a></li>
+                    <li><a href="/community/exhintList">전시 소개&후기</a></li>
                     <li><a href="/community/knowhowList">노하우</a></li>
                     <li><a href="/community/event">이벤트</a></li>
                 </ul>
