--- a/src/main/resources/templates/thymeleaf/fo/community/community_works.html
+++ b/src/main/resources/templates/thymeleaf/fo/community/community_works.html
@@ -109,7 +109,7 @@
                 <ul>
                     <li><a href="/community/main">홈</a></li>
                     <li><a href="/community/worksList" class="over">작품자랑</a></li>
-                    <li><a href="/community/exhintList">전시후기&소개</a></li>
+                    <li><a href="/community/exhintList">전시 소개&후기</a></li>
                     <li><a href="/community/issueList">이슈</a></li>
                     <li><a href="/community/event">이벤트</a></li>
                     <li class="pt0 mt10"><button class="btn_recording" onclick="location.href='/myPage/main'">기록하기</button></li>
