--- a/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_exhint_detailpage.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_exhint_detailpage.html
@@ -102,7 +102,7 @@
     <div id="container">
         <div class="mypage_wrap">
             <div class="works_showingoff_detail_page_wrap mb0">
-                <h2 class="mt50">전시 후기/소개</h2>
+                <h2 class="mt50">전시 소개/후기</h2>
                 
                 <div id="comtFirstBox">
                 
