--- a/src/main/resources/templates/thymeleaf/main.html
+++ b/src/main/resources/templates/thymeleaf/main.html
@@ -113,7 +113,7 @@
                     <button class="btn_more">더보기</button>
                 </div>                
                 <div class="works_layout">
-                    <div class="left">
+                    <div class="">
                         <img src="/resources/img/img_new/main_works_showingoff_sample00.jpg" alt="">
                         <div class="bottom">
                             <img src="/resources/img/img_new/main_works_showingoff_sample02.jpg" alt="">
@@ -248,4 +248,22 @@
         </div>        
     </div>
 </body>
+
+<script type="text/javascript">
+
+	
+ 	
+</script>
+
+<!-- 네이버 광고 로그분석 추적 코드 -->
+<script type="text/javascript" src="//wcs.naver.net/wcslog.js"></script> 
+<script type="text/javascript">
+if(!wcs_add) var wcs_add = {}; 
+wcs_add["wa"] = "s_17cc71bb9b8f";
+if (!_nasa) var _nasa={}; 
+if (window.wcs) {
+wcs.inflow("www.dealing-art.com"); 
+wcs_do(_nasa);
+}
+</script>
 </html>
