--- a/src/main/resources/templates/thymeleaf/fo/community/community_event_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/community/community_event_mo.html
@@ -105,7 +105,7 @@
                 <ul>
                      <li><a href="/community/mainMobile">홈</a></li>
                     <li><a href="/community/worksListMobile">작품자랑</a></li>
-                    <li><a href="/community/exhintListMobile">전시후기&소개</a></li>
+                    <li><a href="/community/exhintListMobile">전시 소개&후기</a></li>
                     <li><a href="/community/issueListMobile">이슈</a></li>
                     <li><a href="/community/eventMobile" class="over">이벤트</a></li>   
                 </ul>
