--- a/src/main/resources/templates/thymeleaf/fo/community/community_home_backup.html
+++ b/src/main/resources/templates/thymeleaf/fo/community/community_home_backup.html
@@ -103,7 +103,7 @@
                 <ul>
                     <li><a href="#" class="over">홈</a></li>
                     <li><a href="#">작품자랑</a></li>
-                    <li><a href="#">전시후기&소개</a></li>
+                    <li><a href="#">전시 소개&후기</a></li>
                     <li><a href="#">이슈</a></li>
                     <li><a href="#">이벤트</a></li>
                     <li class="pt0 mt10"><button class="btn_recording">기록하기</button></li>
