--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_showingoff_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_showingoff_mo.html
@@ -136,7 +136,7 @@
                           <li><a href="#">모두보기</a></li>
                           <li><a href="#">나의 작품</a></li>
                           <li><a href="#">자랑하기</a></li>
-                          <li><a href="#">전시후기&소개</a></li>
+                          <li><a href="#">전시 소개&후기</a></li>
                           <li><a href="#">이슈</a></li>
                           <li><a href="#">알림함</a></li>
                           <li><a href="#">스크랩</a></li>
