--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_work_regipage2.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_work_regipage2.html
@@ -2244,6 +2244,7 @@ function myWorkReg(){
     		function(confirm){
     			if(confirm){
     				$.ajax({
+    					debugger;
     			        type: "post",
     			        url: "/myPage/myWorkReg",
     			        data: formData,
