신규기능 검수리스트 수정반영 (타회원 마이페이지 연동불가)

--- a/src/main/resources/templates/thymeleaf/fo/community/community_works.html
+++ b/src/main/resources/templates/thymeleaf/fo/community/community_works.html
@@ -249,7 +249,7 @@
             }
             
             strHtml += '            		<ul class="user_name">';
-            strHtml += '                		<li><span>'+ work.mbrNcknm +'</span></li>';
+            strHtml += '                		<li><a href="/otherPage/main?mbrSq='+ work.mbrSq +'"><span>'+ work.mbrNcknm +'</span></a></li>';
             strHtml += '                		<li>'+ (work.mbrIntro || "소개가 없습니다.") +'</li>';
             strHtml += '            		</ul>';
             strHtml += '        		</div>';
