--- a/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_showingoff_detailpage.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_showingoff_detailpage.html
@@ -251,7 +251,7 @@
     		userWrapHtml += '		<li class="pt5">';
     		userWrapHtml += '			<img src="'+ (showOff.mbrProfileImgUrl || '/resources/img/mypage/ico_dauser.png') +'">';
     		userWrapHtml += '		</li>';
-    		userWrapHtml += '		<li class="user_name"><span>'+ showOff.mbrNcknm +'</span></li>';
+    		userWrapHtml += '		<li class="user_name"><a href="/otherPage/main?mbrSq='+ showOff.mbrSq +'"><span>'+ showOff.mbrNcknm +'</span></a></li>';
     		userWrapHtml += '		<li class="mem_type">회원유형<span>'+ (showOff.artstSq ? '아티스트' : '컬렉터') +'</span></li>';
     		userWrapHtml += '		<li class="following"><button type="button" onclick="clickFollow('+ showOff.mbrSq +');">+팔로잉</button></li>';
     		userWrapHtml += '	</ul>';
@@ -488,14 +488,15 @@
     	    		
     	    		if(key == "work") {
     	    			html += '	<div class="btn_worksInfo_wrap">';
-    		    		html += '		<button '+ (showOff.comtSalesYn == "Y" && !showOffList.dealStatus ? "" : "style='display: none;'") +' onclick="comtRequest(\'SEL\');">판매 제안하기</button>';
+    	    			//html += '		<button '+ (showOff.comtSalesYn == "Y" && !showOffList.dealStatus ? "" : "style='display: none;'") +' onclick="comtRequest(\'SEL\');">판매 제안하기</button>';
+    		    		html += '		<button '+ (!showOffList.dealStatus ? "style='background: #626262;'" : "style='display: none;'") +' onclick="comtRequest(\'SEL\');">판매 제안하기</button>';
     		    		html += '	</div>';
     	    		} else if(key == "deal") {
     	    			html += '	<div class="bat-box">';
-    	    			html += '		<button type="button" class="ba-btn1 por" id="btn_purchaseOrBid" onclick="goDealDetail('+ obj.dealSq +');">';
+    	    			html += '		<button type="button" style="background: #626262;" class="ba-btn1 por" id="btn_purchaseOrBid" onclick="goDealDetail('+ obj.dealSq +');">';
     	    			html += '			<span>응찰하기</span>';
     	    			html += '		</button>';
-    	    			html += '		<button type="button" class="ba-btn1 por" id="suggestBtn" onclick="openModal(\'workSuggestModal\');">';
+    	    			html += '		<button type="button" style="background: #626262;" class="ba-btn1 por" id="suggestBtn" onclick="chkSuggest();">';
     	    			html += '			<span>요청하기</span>';
     	    			html += '		</button>';
     	    			html += '		<div class="clearboth"></div>';
@@ -558,11 +559,16 @@
     	
     	// 거래 상세 페이지 이동
     	function goDealDetail(dealSq) {
-    		modalConfirm("거래 상세 페이지로 이동하시겠습니까?", function(confrim){
-    			if(confrim){
-		    		location.href='/deal/bidding?SqNumber='+ dealSq;
-    			}
-    		});
+    		//만약 자랑하기 등록한 회원순번과 세션순번 벨리데이션
+    		if(showOff.mbrSq == sMbrSqVal){
+				modalAlertShow("본인이 등록한 작품에는 응찰하기를 할 수 없습니다.");
+			}else{
+				modalConfirm("거래 상세 페이지로 이동하시겠습니까?", function(confrim){
+	    			if(confrim){
+			    		location.href='/deal/bidding?SqNumber='+ dealSq;
+	    			}
+	    		});
+			}
     	}
     	
     	// 판매 제안하기
@@ -612,23 +618,28 @@
     			return;
     		}
     		
-    		modalConfirm(msg + "하시겠습니까?", function(confirm) {
-    			if(confirm) {
-    				$.ajax({
-    					type: "post",
-    					url: "/community/insertComtRequest",
-    					data: param,
-    					success: function(data) {
-    						if(data.result) {
-			    				modalAlertShow(msg+ "이 완료되었습니다.");
-    						}
-    					},
-    					error: function(data) {
-    						modalAlertShow("오류가 발생했습니다.");
-    					}
-    				});
-    			}
-    		});
+    		//만약 자랑하기 등록한 회원순번과 세션순번 벨리데이션
+    		if(showOff.mbrSq == sMbrSqVal){
+				modalAlertShow("본인이 등록한 작품에는 "+msg+"을 할 수 없습니다.");
+			}else{
+				modalConfirm(msg + "하시겠습니까?", function(confirm) {
+	    			if(confirm) {
+	   					$.ajax({
+	       					type: "post",
+	       					url: "/community/insertComtRequest",
+	       					data: param,
+	       					success: function(data) {
+	       						if(data.result) {
+	   			    				modalAlertShow(msg+ "이 완료되었습니다.");
+	       						}
+	       					},
+	       					error: function(data) {
+	       						modalAlertShow("오류가 발생했습니다.");
+	       					}
+	       				});
+	    			}
+	    		});
+			}
     	}
     	
     	// 작품 상세 이미지 마우스 오버 효과 이벤트
@@ -1147,6 +1158,19 @@
     		html += '</div>';
     		
     		$("#container").after(html);
+    	}
+    	
+    	// 요청하기 모달 확인 버튼 이벤트
+    	function openSuggestModal() {
+    		var val = $("input[name=suggest]:checked").val();
+
+    		if(val == "price") {
+	   			closeModal("workSuggestModal");
+    			openModal("workPriceSuggestModal");
+    		} else if(val == "picture") {
+    			closeModal("workSuggestModal");
+    			openModal("RequestPictureModal");
+    		}
     	}
     	
     	// 요청하기 모달 확인 버튼 이벤트
