신규기능 검수리스트 수정반영 (5. [W/M >로그인 > 마이페이지] 오류&수정사항)

--- a/src/main/resources/templates/thymeleaf/fo/community/community_exhint.html
+++ b/src/main/resources/templates/thymeleaf/fo/community/community_exhint.html
@@ -208,6 +208,7 @@
    		obj.startDate = startDate;
    		obj.endDate = endDate;
    		obj.limit = 10;
+   		obj.openYn = "Y";
    		obj.offset = nowPage * 10
 
    		$.ajax({
