--- a/src/main/resources/templates/thymeleaf/fo/community/community_issue.html
+++ b/src/main/resources/templates/thymeleaf/fo/community/community_issue.html
@@ -123,6 +123,13 @@
 	                        <option value="pastOrder">과거 순</option>
 	                    </select>
 	                </div>
+	                <div class="sel_form" style="position: relative;top: auto;right: auto;">
+	                    <select class="knoSelectBox" name="openYn" id="openYn">
+	                        <option value="">구분</option>
+	                        <option value="Y">공개</option>
+	                        <option value="N">비공개</option>
+	                    </select>
+	                </div>
                 </div>
             </div>
             <div class="notice dp-flex">
