--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_common_left.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_common_left.html
@@ -43,7 +43,7 @@
 	                    	<li><a href="/myPage/main">모두보기</a></li>
 	                        <li><a href="/myPage/workList">나의 작품</a></li>
 	                        <li><a href="/myPage/show_off">자랑하기</a></li>
-	                        <li><a href="/myPage/exhint">전시후기&소개</a></li>
+	                        <li><a href="/myPage/exhint">전시소개&후기</a></li>
 	                        <li><a href="/myPage/issue">이슈</a></li>
 	                        <li><a href="/myPage/notis">알림함</a></li>
 	                        <li><a href="/myPage/scrap">스크랩</a></li>
@@ -56,7 +56,7 @@
 	                    	<li><a th:href="@{/otherPage/main(mbrSq=${mbrSq})}">모두보기</a></li> 
 	                        <li><a th:href="@{/otherPage/workList(mbrSq=${mbrSq})}">나의 작품</a></li> 
 	                        <li><a th:href="@{/otherPage/show_off(mbrSq=${mbrSq})}">자랑하기</a></li> 
-	                        <li><a th:href="@{/otherPage/exhint(mbrSq=${mbrSq})}">전시후기&소개</a></li> 
+	                        <li><a th:href="@{/otherPage/exhint(mbrSq=${mbrSq})}">전시소개&후기</a></li> 
 	                        <li><a th:href="@{/otherPage/issue(mbrSq=${mbrSq})}">이슈</a></li>
 	                        <li><a th:href="@{/otherPage/following(mbrSq=${mbrSq})}">팔로잉</a></li> 
 	                   	</ul>
