신규기능 검수리스트 수정반영 (7. [W/M > 마이페이지 > 자랑하기, 전시소개&후기, 이슈 게시물 > 수정하기]오류&수정사항)

--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_issue.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_issue.html
@@ -124,7 +124,7 @@
 						<div class="work-hov">
 							<ul>
 								<li><a href="javascript:void(0);" class="wrh-1"><span>공개/비공개</span></a></li>
-								<li><a href="javascript:void(0);" class="wrh-2"><span>작품정보수정</span></a></li>
+								<li><a href="javascript:void(0);" class="wrh-2"><span>게시물수정</span></a></li>
 								<li><a href="javascript:void(0);" class="wrh-3"><span>삭제</span></a></li>
 							</ul>
 						</div>
@@ -135,7 +135,7 @@
 							<span style="color:white" id="selectedCount">(0)</span>
 							<button type="button" class="wd-btns wdb-1">공개</button>
 							<button type="button" class="wd-btns wdb-1">비공개</button>
-							<button type="button" class="wd-btns wdb-2">판매정보수정</button>
+							<button type="button" class="wd-btns wdb-2">게시물수정</button>
 							<button type="button" class="wd-btns wdb-3">삭제</button>
 							<button type="button" class="wd-btns wdb-all">취소</button>
 						</div>
