--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_showingoff.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_showingoff.html
@@ -133,7 +133,7 @@
 								<div class="work-hov">
 									<ul>
 										<li><a href="#" class="wrh-1"><span>공개/비공개</span></a></li>
-										<li><a href="#" class="wrh-2"><span>작품정보수정</span></a></li>
+										<li><a href="#" class="wrh-2"><span>게시글수정</span></a></li>
 										<li><a href="#" class="wrh-3"><span>삭제</span></a></li>
 									</ul>
 								</div>
@@ -144,7 +144,7 @@
 									<span style="color:white" id="selectedCount">(0)</span>
 									<button type="button" class="wd-btns wdb-1">공개</button>
 									<button type="button" class="wd-btns wdb-1">비공개</button>
-									<button type="button" class="wd-btns wdb-2">판매정보수정</button>
+									<button type="button" class="wd-btns wdb-2">게시글수정</button>
 									<button type="button" class="wd-btns wdb-3">삭제</button>
 									<button type="button" class="wd-btns wdb-all">취소</button>
 								</div>
@@ -317,7 +317,7 @@ function ShowListAjax(callback){
 
 function ShowList(data,callback){
 	var html = '';
-	
+
 	result = data.result;
 	var Total = data.myTotal;
 	var workTotal = data.myWorksTotal;
