--- a/src/main/resources/templates/thymeleaf/fo/deal/workDetail.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/workDetail.html
@@ -252,6 +252,23 @@
 					</div>
 				</th:block>
 			</div>
+			
+			<!-- 자랑하기가 없는 작품일 경우 보죠주지 않는 영역 -->
+			<div class="contents conbg" th:if="${not #maps.isEmpty(result.showoffList)}">
+				<div class="cont-title2 max-1500">
+					<h3>이 작품의 자랑하기</h3>
+				</div>
+				
+					<div class="swi-box1 max-1500">
+						<div class="swiper mySwiper2">
+							<div class="swiper-wrapper"  id="swiper_showoffList"></div>
+							<div class="swiper-pagination swpa-2 pc-no"></div>
+						</div>
+						<div class="swiper-button-next sbn ta-no"><span><img src="/resources/img/arr-r.jpg"></span></div>
+						<div class="swiper-button-prev sbp ta-no"><span><img src="/resources/img/arr-l.jpg"></span></div>
+					</div>
+				</th:block>
+			</div>
 			<!-- 영역 끝 -->
 		</div>
 	</div>
@@ -673,6 +690,7 @@ jQuery(document).ready(function($){
 		$(".ellipsis").css('padding',20);
     }
 	workList();
+	fn_ShowoffList(); // 해당 작품의 자랑하기 목록
 });
 
 $('.selectpicker').selectpicker('render');
@@ -717,6 +735,27 @@ function workList(){
      	 	html +='</div>';
 		}
 		$("#swiper_workList").append(html).trigger("create");
+	}
+}
+
+//작품의 자랑하기 목록
+function fn_ShowoffList(){
+	if(result.showoffList.length > 0){
+		$("#swiper_showoffList").empty();
+		var html = '';
+		for(var i=0; i<result.showoffList.length; i++){
+			html +='<div class="swiper-slide hd-div">';
+			// 커뮤니티 자랑하기로 이동
+			html +='	<a href="/community/showingOffDetail?SqNumber='+result.showoffList[i].comtSq+'">';
+			html +='		<img src="'+result.showoffList[i].comtImgUrl+'" class="hd-img" style="width:100&;"/>';
+			html +='		<div class="hd-text">';
+			html +='			<h4 style="height:100px;">'+result.showoffList[i].artstActvtyNm+'('+result.showoffList[i].artstBirthYear+')</h4>';
+			html +='			<div class="hd-d1" style="margin:0 auto;">'+result.showoffList[i].workNm+'('+result.showoffList[i].workProdcYear+')';
+     	   	html +='		</div>';
+     	  	html +='	</a>';
+     	 	html +='</div>';
+		}
+		$("#swiper_showoffList").append(html).trigger("create");
 	}
 }
 
