--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_exhint_page2.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_exhint_page2.html
@@ -228,15 +228,14 @@
 							</div>
 						</div>
 					</div>						
-
-					<div class="bat-box5">
-						<button type="button" class="ba-btn1" onclick="myexhibitReg()"><span>등록</span></button>
-						<button type="button" class="ba-btn3" onclick="myexhibitStorage()"><span>임시저장</span></button>
-						<button type="button" class="ba-btn3"><span>미리보기</span></button>
-						<button type="button" class="ba-btn3" onclick="javascript:history.back();"><span>취소</span></button>
+					<div class="btn_regi_area">
+						<ul>
+							<li><button type="button" class="registration" onclick="myexhibitReg()"><span>등록</span></button></li>
+							<li><button type="button" onclick="myexhibitStorage()"><span>임시저장</span></button></li>
+							<li><button type="button" ><span>미리보기</span></button></li>
+							<li><button type="button" onclick="javascript:history.back();"><span>취소</span></button></li>
+						</ul>
 					</div>
-					
-					
 				</div>
 			</div>
 
@@ -300,7 +299,7 @@
 	    			        success: function(data) {
 	    			        	if(data == 1){
 	    			        		modalAlertShow("전시후기/소개 등록되었습니다.");
-	    			        		location.href = "/community/exhintList";
+	    			        		location.href = "/myPage/exhint";
 	    			        	}else{
 	    			        		modalAlertShow("전시후기/소개 등록에 실패했습니다. 다시 시도해주세요.");
 	    			        	}
