--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_issue_page2.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_issue_page2.html
@@ -186,15 +186,14 @@
 							</div>
 						</div>
 					</div>						
-
-					<div class="bat-box5">
-						<button type="button" class="ba-btn1" onclick="myknowhowReg()"><span>등록</span></button>
-						<button type="button" class="ba-btn3" onclick="myknowhowStorage()"><span>임시저장</span></button>
-						<button type="button" class="ba-btn3"><span>미리보기</span></button>
-						<button type="button" class="ba-btn3" onclick="javascript:history.back();"><span>취소</span></button>
+					<div class="btn_regi_area">
+						<ul>
+							<li><button type="button" class="registration" onclick="myknowhowReg()"><span>등록</span></button></li>
+							<li><button type="button" onclick="myknowhowStorage()"><span>임시저장</span></button></li>
+							<li><button type="button" ><span>미리보기</span></button></li>
+							<li><button type="button" onclick="javascript:history.back();"><span>취소</span></button></li>
+						</ul>
 					</div>
-					
-					
 				</div>
 			</div>
 
@@ -258,7 +257,7 @@
 	    			        success: function(data) {
 	    			        	if(data == 1){
 	    			        		modalAlertShow("이슈 등록되었습니다.");
-	    			        		location.href = "/community/issueList";
+	    			        		location.href = "/myPage/issue";
 	    			        	}else{
 	    			        		modalAlertShow("이슈 등록에 실패했습니다. 다시 시도해주세요.");
 	    			        	}
