--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_work_regipage2.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_work_regipage2.html
@@ -973,7 +973,7 @@
 	                    <ul>
 	                        <li><button type="button" class="registration" onclick="myWorkReg()">등록</button></li>
 	                        <li><button type="button" onclick="myWorkStorage()">임시저장</button></li>
-	                        <li><button type="button">미리보기</button></li>
+	                        <li><button type="button" id="previewBtn" disabled>미리보기</button></li>
 	                        <li><button type="button" onclick="javascript:history.back();">취소</button></li>
 	                    </ul>
 	                </div>
@@ -1904,6 +1904,41 @@ function removeCss(obj) {
     });
 }
 
+//소장품 자랑하기 공개 체크시 미리보기 버튼 비활성화
+$("input[name='COLLComtOpenYn']").change(function() {
+	var val = $("input[name='COLLComtOpenYn']:checked").val();
+	const btnNm = document.getElementById('previewBtn');
+	
+	if(val == "Y"){
+		btnNm.disabled = true;
+		$("#previewBtn").css("background-color", "#A9A9A9");
+	}else{
+		/*
+		btnNm.disabled = false;
+		$("#previewBtn").css("background-color", "#FFFFFF");
+		*/
+		btnNm.disabled = true;
+		$("#previewBtn").css("background-color", "#A9A9A9");
+	}
+});	
+
+// 창작 작품 자랑하기 공개 여부에 따른 미리보기 버튼 이벤트
+$("input[name='WORKComtOpenYn']").change(function() {
+	var val = $("input[name='WORKComtOpenYn']:checked").val();
+	const btnNm = document.getElementById('previewBtn');
+	
+	if(val == "Y"){
+		btnNm.disabled = true;
+		$("#previewBtn").css("background-color", "#A9A9A9");
+	}else{
+		/*
+		btnNm.disabled = false;
+		$("#previewBtn").css("background-color", "#FFFFFF");
+		*/
+		btnNm.disabled = true;
+		$("#previewBtn").css("background-color", "#A9A9A9");
+	}
+});	
 /* ---------------------- 자랑하기 end ---------------------- */
 
 //필수 입력값 체크
@@ -2250,10 +2285,10 @@ function myWorkReg(){
     			        contentType : false,
     			        processData : false,
     			        success: function(data) {
-    			        	if(data == 1){
-    			        		modalAlertShow("작품이 등록되었습니다.", "myWorkList");
+    			        	if(data > 1){
+    			        		modalAlertShow("작품이 등록되었습니다.", "back");
     			        	}else{
-    			        		modalAlertShow("작품 등록에 실패했습니다. 다시 시도해주세요.", "myWorkList");
+    			        		modalAlertShow("작품 등록에 실패했습니다. 다시 시도해주세요.", "reload");
     			        	}
     			        },
     			        error: function(error) {
