--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_work_regipage2_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_work_regipage2_mo.html
@@ -1904,6 +1904,7 @@ function removeCss(obj) {
     });
 }
 
+// 2023.10.12 홍충기 추가
 //자랑하기 공개 체크시 미리보기 버튼 비활성화
 $(document).ready(function (){
 	$("input[name='COLLComtOpenYn']").change(function() {
