--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_issue_page2.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_issue_page2.html
@@ -185,7 +185,8 @@
 								</div>
 							</div>
 						</div>
-					</div>						
+					</div>
+					<!-- 2023.10.12 홍충기 - 버튼 이미지 변경 -->				
 					<div class="btn_regi_area">
 						<ul>
 							<li><button type="button" class="registration" onclick="myknowhowReg()"><span>등록</span></button></li>
@@ -256,6 +257,11 @@
 	    			        processData : false,
 	    			        success: function(data) {
 	    			        	if(data == 1){
+	    			        		/*
+	    			        		 * 2023.10.12 홍충기 수정
+	    			        		 * ASIS : 커뮤니티 이슈 페이지로 이동
+	    			        		 * 마이페이지 이슈로 이동하도록 수정
+	    			        		 */
 	    			        		modalAlertShow("이슈 등록되었습니다.");
 	    			        		location.href = "/myPage/issue";
 	    			        	}else{
