--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_work_regipage2.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_work_regipage2.html
@@ -973,7 +973,8 @@
 	                    <ul>
 	                        <li><button type="button" class="registration" onclick="myWorkReg()">등록</button></li>
 	                        <li><button type="button" onclick="myWorkStorage()">임시저장</button></li>
-	                        <li><button type="button" id="previewBtn" disabled>미리보기</button></li>
+	                        <!-- 2023.10.13 홍충기 display:none 처리 -->
+	                        <li><button type="button" id="previewBtn" style="display:none">미리보기</button></li>
 	                        <li><button type="button" onclick="javascript:history.back();">취소</button></li>
 	                    </ul>
 	                </div>
@@ -1904,6 +1905,10 @@ function removeCss(obj) {
     });
 }
 
+/*
+ * 2023.10.12 홍충기 수정
+ * 소장품 및 작품 자랑하기 공개 체크시 미미보기 이벤트
+ */
 //소장품 자랑하기 공개 체크시 미리보기 버튼 비활성화
 $("input[name='COLLComtOpenYn']").change(function() {
 	var val = $("input[name='COLLComtOpenYn']:checked").val();
@@ -2285,7 +2290,15 @@ function myWorkReg(){
     			        contentType : false,
     			        processData : false,
     			        success: function(data) {
-    			        	if(data > 1){
+    			        	/*
+			        		 * 2023.10.12 홍충기 수정
+			        		 * ASIS : 마이페이지 내 작품 리스트로 이동, 정상등록 되어도 data가 1이 아닐수 있어 등록 실패 메세지 팝업
+			        		 * 이전 화면으로 이동하거나 등록 화면 재조회 하도록 수정
+			        		 * data가 1 이상이면 정상등록으로 확인 하도록 수정
+			        		 */
+			        		 console.log("======> " + data);
+    				debugger;
+    			        	if(data == 1){
     			        		modalAlertShow("작품이 등록되었습니다.", "back");
     			        	}else{
     			        		modalAlertShow("작품 등록에 실패했습니다. 다시 시도해주세요.", "reload");
