--- a/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_showingoff_detailpage.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_showingoff_detailpage.html
@@ -259,7 +259,8 @@
     		userWrapHtml += '<div class="icon_box">';
     		userWrapHtml += '	<ul>';
     		userWrapHtml += '		<li class="time hidden">'+ (showOff.dateDiff >= 24 ? showOff.regDt.substring(0, showOff.regDt-3) : setTimeFormat(showOff.regDt)) +'</li>';
-    		userWrapHtml += '		<li onclick="likeCheck('+comtSq+')" style="cursor: pointer;"><p class="ico_good"></p><span>'+ showOff.comtLikes +'</span></li>';
+    		userWrapHtml += '		<li onclick="likeCheck(' + comtSq + ')" style="cursor: pointer;"><p class="ico_good"></p><span>'+ showOff.comtLikes +'</span></li>';
+    		/* userWrapHtml += '		<li style="cursor: pointer;"><p class="ico_good"></p><span>'+ showOff.comtLikes +'</span></li>'; */
     		userWrapHtml += '		<li onclick="scrapCheck('+comtSq+');" style="cursor: pointer;"><p class="ico_scrap"></p><span>'+ showOff.comtScraps +'</span></lreplyRegi>';
     		userWrapHtml += '		<li><p class="ico_hits"></p><span>'+ showOff.comtViews +'</span></li>';
     		userWrapHtml += '		<li><p class="ico_comments"></p><span>'+ showOff.comtCmts +'</span></li>';
@@ -1388,18 +1389,22 @@
 		        url: "/member/myPage/scrapCheck",
 		        data: {
 		        	mbrSq : sMbrSqVal,
-		        	comtSq : sqNumber
+		        	comtSq : sqNumber,
 		        },
 		        success: function(data) {
-		        	if(data > 0){
-		        		if(confirm("스크랩 목록에서 '제거'하시겠습니까?")){
-		        			scrapDel(sqNumber);
-		        	    }
-		        	}else{
-		        		if(confirm("스크랩 목록에 '추가'하시겠습니까?")){
-		        			scrapAdd(sqNumber);
-		        	    }
-		        	}
+		        	if(sMbrSqVal == null) {
+						modalAlertShow("로그인 된 회원만 이용 할 수 있습니다.");
+					} else {
+			        	if(data > 0){
+			        		if(confirm("스크랩 목록에서 '제거'하시겠습니까?")){
+			        			scrapDel(sqNumber);
+			        	    }
+			        	}else{
+			        		if(confirm("스크랩 목록에 '추가'하시겠습니까?")){
+			        			scrapAdd(sqNumber);
+			        	    }
+			        	}
+					}
 		        },
 		        error: function(error) {
 		            alert("오류 발생" + error);
@@ -1454,7 +1459,128 @@
 		        }
 			});
 		}
-	</script>
+		
+ 		// 좋아요 갯수 변경
+ 		// 이 함수 적용 시 화면에 좋아요 갯수 업데이트 확인. 
+ 		// 좋아요 체크여부 확인, 추가, 취소 함수 추가해도 적용이 안됌.
+ 		function likeCheck() {
+ 			let likeBtn = document.querySelector(".ico_good");
+			if(sMbrSqVal == null) {
+				modalAlertShow("로그인 된 회원만 이용 할 수 있습니다.");
+			} else {
+				var param = new Object();
+				var element = $(this);
+				param.comtSq = comtSq;
+				param.mbrSq = sMbrSqVal;
+				if($(this).hasClass("on")){
+					$.ajax({
+				        type: "post",
+				        url: "/member/myPage/likeCnt",
+				        data: param,
+				        success: function(data) {
+				        	if(data == 0) {
+				        		//likeCheckYn();
+				        	}
+				        },
+				        error: function(error) {
+				            alert("오류 발생" + error);
+				        }
+					});
+				}else{
+					$.ajax({ 
+				        type: "post",
+				        url: "/member/myPage/likeCnt",
+				        data: param,
+				        success: function(data) {
+				        	if(data > 0){
+				        		//likeCheckYn();
+				        	}else{
+				        		modalAlertShow("좋아요 취소 실패");
+				        	}
+				        },
+				        error: function(error) {
+				            alert("오류 발생" + error);
+				        }
+					});
+				}
+				}
+			}
+			
+		// 좋아요 체크 여부 조회
+		// 이 함수 적용 시 좋아요 체크 여부 확인 가능. likeDel, likeAdd함수 실행 안됨.
+   					function likeCheckYn(sqNumber) {
+						$.ajax({
+							type : "post",
+							url : "/member/myPage/likeCheck",
+							data : {
+								mbrSq : sMbrSqVal,
+								comtSq : sqNumber,
+							},
+							success : function(data) {
+								if (data > 0) {
+									if (confirm("해당 게시물에 좋아요를 취소하시겠습니까?")) {
+										likeDel(sqNumber);
+									}
+								} else {
+									if (confirm("해당 게시물에 좋아요를 추가하시겠습니까?")) {
+										likeAdd(sqNumber);
+									}
+								}
+							},
+							error : function(error) {
+								alert("오류 발생" + error);
+							}
+						});
+					}
+
+ 					// 좋아요 추가
+					function likeAdd() {
+						$.ajax({
+							type : "post",
+							url : "/member/myPage/likeAdd",
+							data : {
+								mbrSq : sMbrSqVal,
+								comtSq : sqNumber
+							},
+							success : function(data) {
+								if (data > 0 || data == null) {
+									alert("해당 게시물에 좋아요를 추가했습니다.");
+									//location.reload();
+								} else {
+									alert("좋아요 추가 실패했습니다.");
+									//location.reload();
+								}
+							},
+							error : function(error) {
+								alert("오류 발생" + error);
+							}
+						});
+					}
+
+					// 좋아요 취소
+					function likeDel() {
+						$.ajax({
+							type : "post",
+							url : "/member/myPage/likeDel",
+							data : {
+								mbrSq : sMbrSqVal,
+								comtSq : sqNumber
+							},
+							success : function(data) {
+								if (data > 0) {
+									alert("좋아요를 취소했습니다.");
+									//location.reload();
+								} else {
+									alert("좋아요 취소 실패했습니다.");
+									//location.reload();
+								}
+							},
+							error : function(error) {
+								alert("오류 발생" + error);
+							}
+						});
+					}
+				</script>
 	
 	<!-- 네이버 광고 로그분석 추적 코드 -->
 	<script type="text/javascript" src="//wcs.naver.net/wcslog.js"></script> 
